--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "star-gazer",
   "version": "0.1.0",
-  "homepage": "https://sjtuxueguanhua.github.io/579fp",
+  "homepage": "https://sjtuxueguanhua.github.io/final_project",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
